--- a/style.css
+++ b/style.css
@@ -1,7 +1,31 @@
-.img1 {
-  border: 3px black solid;
-  border-radius: 10px;
-}
 body {
   background-color: #f2f2f2;
+}
+div.home {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+  border-radius: 10px;
+  background-color: white;
+  background-clip: padding-box;
+  height: 140px;
+  display: flex;
+  overflow: hidden;
+}
+div.home:hover {
+  border: 1px solid #777;
+}
+
+div.home img {
+  width: 100%;
+  height: auto;
+}
+
+div.description {
+  padding: 10px;
+  text-align: left;
+  background: white;
+  align-self: flex-end;
+  width: inherit;
 }
