--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
 
 body {
   font-family: Raleway;
-  background-color: #f2f2f2;
+  margin: 0;
 }
 
 #bloc_page {
-  width: 1920px;
+  padding: 0px 50px;
   margin: auto;
 }
 
@@ -26,15 +26,6 @@ header {
   align-items: flex-end;
 }
 
-#logo img {
-  width: 180px;
-  height: 90px;
-}
-#logo {
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-}
 #titre_principal {
   display: flex;
   flex-direction: column;
@@ -51,38 +42,41 @@ header h2 {
   margin-top: 10px;
   font-weight: normal;
 }
-
+#logo {
+  height: 90px;
+}
 nav {
   display: flex;
-  height: 200px;
-  justify-content: start;
-  align-items: flex-start;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
 }
-
 nav ul {
-  list-style-type: none;
-  display: flex;
+  display: table;
+  list-style: none;
+  height: 100%;
 }
-
-nav li {
-  margin-right: 60px;
+nav ul li {
+  display: table-cell;
+  padding: 0px 20px;
+  vertical-align: middle;
 }
-
-nav a {
-  display: flex;
-  font-size: 1.6em;
-  color: #181818;
-  padding-bottom: 3px;
+nav ul li:hover {
+  border-top: 4px solid #0065fc;
+}
+nav ul li a {
   text-decoration: none;
+  color: black;
+  font-size: x-large;
+}
+nav ul li a:hover {
+  color: #0065fc;
+}
+.bold {
+  color: #0065fc;
+  font-weight: bold;
 }
 
-nav a:hover {
-  color: #0065fc;
-  border-top: 3px solid blue;
-}
-li span {
-  color: #0065fc;
-}
 h1 {
   height: 100px;
   font-size: 1.5em;
@@ -93,44 +87,44 @@ h1 {
   align-items: baseline;
   margin: 0;
 }
-em {
-  font-size: 0.5em;
-  font-weight: normal;
-  margin: 35px 0 0 0;
-  align-items: ;
-}
+
 #rechercher {
-  border: solid blue 2px;
-  height: 55px;
-  display: flex;
-  align-items: center;
-  border-radius: 80px;
-  width: 480px;
+  border: solid #f2f2f2 2px;
+  background-color: #f2f2f2;
+  height: 40px;
+  display: inline-flex;
+  border-radius: 10px;
+  overflow: hidden;
 }
+
 input {
-  height: 55px;
   width: 200px;
-  font-size: large;
   font-weight: bolder;
   align-items: center;
+  border: none;
+}
+::placeholder {
+  color: #bbb;
+}
+.searchTerm {
+  border: none;
+  width: 300px;
+  padding: 0px 10px;
 }
 i {
-  padding: 20px;
-  height: 40px;
-  width: 20px;
+  align-self: center;
+  padding: 0px 20px;
 }
 
-span button {
-  padding-block: 10px;
-  height: 60px;
-  width: 200px;
-  font-size: large;
-  font-weight: bolder;
-  align-items: center;
+.searchbutton {
   background-color: #0065fc;
+  border: none;
+  text-align: center;
   color: white;
+  font-weight: lighter;
+  padding: 0px 10px;
+  overflow: hidden;
 }
-
 #filtre {
   border: navy solid 3px;
 }
