--- a/style.css
+++ b/style.css
@@ -9,34 +9,28 @@
     url("raleway-v18-latin-regular.ttf") format("truetype"),
     url("raleway-v18-latin-regular.svg#Raleway") format("svg");
 }
-
 body {
   font-family: Raleway;
   margin: 0;
 }
-
 #bloc_page {
   padding: 0px 50px;
   margin: auto;
 }
-
 header {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
 }
-
 #titre_principal {
   display: flex;
   flex-direction: column;
 }
-
 header h1 {
   font-size: 1.4em;
   margin-top: -50px;
   font-weight: normal;
 }
-
 header h2 {
   font-size: 1.3em;
   margin-top: 10px;
@@ -76,7 +70,6 @@ nav ul li a:hover {
   color: #0065fc;
   font-weight: bold;
 }
-
 h1 {
   height: 100px;
   font-size: 1.5em;
@@ -87,7 +80,6 @@ h1 {
   align-items: baseline;
   margin: 0;
 }
-
 #rechercher {
   border: solid #f2f2f2 2px;
   background-color: #f2f2f2;
@@ -96,7 +88,6 @@ h1 {
   border-radius: 10px;
   overflow: hidden;
 }
-
 input {
   width: 200px;
   font-weight: bolder;
@@ -115,7 +106,6 @@ input {
   align-self: center;
   padding: 0px 20px;
 }
-
 .searchbutton {
   background-color: #0065fc;
   border: none;
@@ -168,34 +158,75 @@ input {
   border-radius: 100%;
   color: #0065fc;
 }
-#information {
-  border: solid green 3px;
+#info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
-
-div.home {
+.infoBtn {
+  border: #f2f2f2 solid 2px;
+  color: #0065fc;
+  display: flex;
+  padding: 10px;
+  height: 3px;
+  width: 3px;
+  border-radius: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.infoText {
+  padding: 10px;
+}
+#container {
+  display: flex;
+  justify-content: end;
+  background-color: #f2f2f2;
+  border-radius: 15px;
+  width: 55%;
+}
+.cardContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.containerName p {
+  padding: 0px 20px;
+}
+.home {
   margin: 5px;
-  border: 1px solid #ccc;
-  float: left;
-  width: 180px;
+  border: 3px solid white;
   border-radius: 10px;
   background-color: white;
-  height: 140px;
   display: flex;
   overflow: hidden;
-}
-div.home:hover {
-  border: 1px solid #777;
-}
-
-div.home img {
-  width: 100%;
-  height: auto;
-}
-
-div.description {
-  padding: 10px;
+  flex-direction: column;
   text-align: left;
   background: white;
-  align-self: flex-end;
-  width: inherit;
+}
+.home a {
+  text-decoration: none;
+  color: black;
+}
+.home img {
+  height: 150px;
+  width: 250px;
+  object-fit: cover;
+}
+.starsUp {
+  color: #0065fc;
+}
+.starsDown {
+  color: #f2f2f2;
+}
+.stars {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 5px 10px;
+}
+.home:hover {
+  border: 3px solid #0065fc;
+}
+footer {
+  border: solid black 2px;
 }
