--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-famliy: "Raleway";
+  font-family: raleway;
   font-style: normal;
   font-weight: 400;
   src: url("raleway-v18-latin-regular.eot");
@@ -10,7 +10,7 @@
     url("raleway-v18-latin-regular.svg#Raleway") format("svg");
 }
 body {
-  font-famliy: Raleway;
+  font-family: raleway;
   margin: 0;
 }
 #bloc_page {
@@ -183,6 +183,8 @@ input {
   background-color: #f2f2f2;
   border-radius: 15px;
   width: 55%;
+  float: left;
+  height: 570px;
 }
 .cardContainer {
   display: flex;
@@ -201,7 +203,6 @@ input {
   overflow: hidden;
   flex-direction: column;
   text-align: left;
-  background: white;
 }
 .home a {
   text-decoration: none;
@@ -227,6 +228,74 @@ input {
 .home:hover {
   border: 3px solid #0065fc;
 }
+
+#container1 {
+  display: flex;
+  justify-content: center;
+  background-color: #f2f2f2;
+  border-radius: 15px;
+  width: 35%;
+  height: 570px;
+  flex-direction: column;
+  margin-left: 60%;
+}
+.container1Name p {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px;
+  padding: 0px 20px;
+  margin-top: -25px;
+}
+.cardContainer1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home1 {
+  border: 3px solid white;
+  border-radius: 10px;
+  background-color: white;
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  width: 500px;
+  margin: 10px;
+}
+.home1 a {
+  text-decoration: none;
+  color: black;
+  display: flex;
+}
+.home1 img {
+  display: flex;
+  height: 150px;
+  width: 40%;
+  object-fit: cover;
+  float: left;
+}
+.hotelName1 {
+  padding: 30px;
+}
+.starsUp1 {
+  color: #0065fc;
+}
+.starsDown1 {
+  color: #f2f2f2;
+}
+#stars1 {
+  display: flex;
+  flex-direction: row;
+  margin-left: 220px;
+  margin-top: -50px;
+  margin-bottom: 10px;
+
+  padding: 5px 10px;
+}
+.home1:hover {
+  border: 3px solid #0065fc;
+}
+
 footer {
   border: solid black 2px;
 }
