--- a/style.css
+++ b/style.css
@@ -269,13 +269,14 @@ input {
 }
 .home1 img {
   display: flex;
-  height: 150px;
+  height: 135px;
   width: 40%;
   object-fit: cover;
   float: left;
 }
 .hotelName1 {
-  padding: 30px;
+  display: flex;
+  flex-direction: column;
 }
 .starsUp1 {
   color: #0065fc;
@@ -286,11 +287,6 @@ input {
 #stars1 {
   display: flex;
   flex-direction: row;
-  margin-left: 220px;
-  margin-top: -50px;
-  margin-bottom: 10px;
-
-  padding: 5px 10px;
 }
 .home1:hover {
   border: 3px solid #0065fc;
