--- a/style.css
+++ b/style.css
@@ -1,39 +1,47 @@
-@font-face {
+ed CSS Source map Restructure Beautify @font-face {
   font-family: raleway;
   font-style: normal;
   font-weight: 400;
-  src: url("raleway-v18-latin-regular.eot");
-  src: url("raleway-v18-latin-regular.eot?#iefix") format("embedded-opentype"),
-    url("raleway-v18-latin-regular.woff2") format("woff2"),
-    url("raleway-v18-latin-regular.woff") format("woff"),
-    url("raleway-v18-latin-regular.ttf") format("truetype"),
-    url("raleway-v18-latin-regular.svg#Raleway") format("svg");
+  src: url(raleway-v18-latin-regular.eot);
+  src: url(raleway-v18-latin-regular.eot?#iefix) format("embedded-opentype"),
+    url(raleway-v18-latin-regular.woff2) format("woff2"),
+    url(raleway-v18-latin-regular.woff) format("woff"),
+    url(raleway-v18-latin-regular.ttf) format("truetype"),
+    url(raleway-v18-latin-regular.svg#Raleway) format("svg");
 }
 
-body {
+body,
+footer {
   font-family: raleway;
   margin: 0;
 }
 
 #bloc_page {
-  width: auto;
+  width: 1440px;
 }
+
 a {
   text-decoration: none;
-  color: black;
+  color: #000;
 }
 
 #logo {
   width: 130px;
 }
 
+header,
 nav {
   display: flex;
+  padding: 0 50px;
+}
+
+nav {
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  padding: 0px 50px;
+  padding-left: initial;
 }
+
 nav ul {
   display: table;
   list-style: none;
@@ -41,62 +49,66 @@ nav ul {
   margin: 0;
   float: left;
 }
+
 nav ul li {
   display: table-cell;
-  padding: 0px 20px;
-  vertical-align: middle;
 }
+
+nav button:hover,
 nav ul li:hover {
   border-top: 4px solid #0065fc;
 }
+
 nav ul li a {
   font-size: x-large;
 }
+
 nav ul li a:hover {
   color: #0065fc;
 }
-.navigation {
-  height: 100%;
-  background-color: white;
+
+.navigation,
+nav button {
+  height: 200px;
+  background-color: #fff;
 }
 
 .bold {
   color: #0065fc;
-  font-weight: bold;
+  font-weight: 700;
+}
+
+nav button,
+nav ul li {
+  padding: 0 20px;
+  vertical-align: middle;
 }
 
 nav button {
   font-size: x-large;
-
-  padding: 0px 20px;
-  vertical-align: middle;
   display: table;
   list-style: none;
-  height: 100%;
-  background-color: white;
-  border: none;
-  outline: none;
+  border: 0;
+  outline: 0;
 }
-nav button:hover {
-  border-top: 4px solid #0065fc;
-}
-header {
-  display: flex;
-  flex-direction: column;
 
-  padding: 0px 50px;
+header {
+  flex-direction: column;
 }
+
 h1 {
   font-size: 1.5em;
 }
+
 h2 {
   font-size: 1.3em;
-  font-weight: normal;
+  font-weight: 400;
 }
 
 ::placeholder {
   color: #bbb;
 }
+
 .searchBar {
   border: solid #f2f2f2 2px;
   background-color: #f2f2f2;
@@ -106,122 +118,258 @@ h2 {
   overflow: hidden;
   width: max-content;
 }
+
 .searchBar i {
   align-self: center;
-  padding: 0px 20px;
+  padding: 0 20px;
 }
+
 .searchInput {
   font-weight: bolder;
   align-items: center;
-  border: none;
+  border: 0;
   width: 300px;
-  padding: 0px 10px;
+  padding: 0 10px;
 }
 
 .searchbutton {
   background-color: #0065fc;
-  border: none;
+  border: 0;
   text-align: center;
-  color: white;
+  color: #fff;
   font-weight: lighter;
-  padding: 0px 10px;
+  padding: 0 10px;
   overflow: hidden;
 }
+
 .filters {
   display: flex;
   justify-content: left;
   align-items: center;
-  padding: 10px 0px;
+  padding: 10px 0;
 }
+
 .filterContainer {
   margin-left: 10px;
-
   justify-content: space-around;
   display: flex;
   flex-direction: row;
 }
+
 .filterBtn {
   display: flex;
   border-radius: 20px;
-  background-color: white;
+  background-color: #fff;
   height: 35px;
   align-items: center;
   overflow: hidden;
   padding: 0;
-  outline: none;
+  outline: 0;
   border: #f2f2f2 solid 2px;
   margin-right: 20px;
 }
+
 .filterBtnText {
-  padding: 0px 10px;
+  padding: 0 10px;
 }
+
 .filterBtn:active {
   border: #0065fc solid 2px;
 }
+
 .filterBtn:hover {
   background-color: #deebff;
 }
+
 .filterBtnIcon {
-  display: flex;
   background: #deebff;
-  align-items: center;
   justify-content: center;
   height: 35px;
   width: 35px;
   border-radius: 100%;
   color: #0065fc;
 }
-#info {
+
+#info,
+.filterBtnIcon,
+.infoBtn {
   display: flex;
-  flex-direction: row;
   align-items: center;
 }
+
+#info {
+  flex-direction: row;
+}
+
 .infoBtn {
   border: #f2f2f2 solid 2px;
   color: #0065fc;
-  display: flex;
-  padding: 10px;
   height: 3px;
   width: 3px;
   border-radius: 100%;
-  align-items: center;
   justify-content: center;
 }
+
+.infoBtn,
 .infoText {
   padding: 10px;
 }
+
 main {
-  display: flex;
   flex-flow: wrap;
-  padding: 0px 50px;
-  justify-content: space-between;
+  padding: 0 50px;
 }
+
 .contentContainer {
   display: flex;
   background-color: #f2f2f2;
   border-radius: 15px;
-  padding: 0px 20px;
+  padding: 0 20px;
   flex-direction: column;
 }
 
-.contentContainerTitle {
+.bottom {
+  background: 0 0;
+  width: 100%;
+  padding: 0;
+  height: fit-content;
+  margin-bottom: 50px;
+}
+
+.cardContainerTitle {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  margin-top: 50px;
+}
+
+.bottomCard {
+  background: 0 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto auto;
+  grid-template-areas: "photo1 photo2 photo4 photo5" "photo1 photo2 photo4 photo6" "photo1 photo3 photo4 photo6";
+  gap: 15px 15px;
+}
+
+.cardBigImage1 {
+  border: solid 3px #f2f2f2;
+  box-shadow: #f2f2f2 5px 5px 5px;
+  width: 315px;
+  overflow: hidden;
+  border-radius: 15px;
+}
+
+.cardBigImage1:hover,
+.cardBigImage2:hover,
+.cardBigImage3:hover,
+.cardBigImage4:hover,
+.cardBigImage5:hover,
+.cardBigImage6:hover {
+  border: #0065fc solid 3px;
+}
+
+#photo1 {
+  grid-area: photo1;
+}
+
+.cardBigImage1 img,
+.cardBigImage2 img {
+  width: 320px;
+  height: 600px;
+  object-fit: cover;
+}
+
+.cardBigImage2 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 4;
+}
+
+#photo2 {
+  grid-area: photo2;
+}
+
+.cardBigImage2 img {
+  height: 380px;
+}
+
+.cardBigImage2,
+.cardBigImage3,
+.cardBigImage4,
+.cardBigImage5,
+.cardBigImage6 {
+  border: solid 3px #f2f2f2;
+  box-shadow: #f2f2f2 5px 5px 5px;
+  width: 315px;
+  overflow: hidden;
+  border-radius: 15px;
+}
+
+#photo3 {
+  grid-area: photo3;
+}
+
+.cardBigImage3 img,
+.cardBigImage4 img {
+  width: 320px;
+  height: 140px;
+  object-fit: cover;
+}
+
+#photo4 {
+  grid-area: photo4;
+}
+
+.cardBigImage4 img {
+  height: 600px;
+}
+
+#photo5 {
+  grid-area: photo5;
+}
+
+.cardBigImage5 img,
+.cardBigImage6 img {
+  width: 320px;
+  height: 260px;
+  object-fit: cover;
+}
+
+#photo6 {
+  grid-area: photo6;
+}
+
+.cardBigImageDescription {
+  padding: 0 0 0 20px;
+}
+
+.contentContainerTitle,
+main {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+}
+
+.contentContainerTitle {
+  align-items: center;
   width: auto;
 }
 
-.left {
+.left,
+.right {
   width: 50%;
   height: fit-content;
   flex-direction: column;
 }
+
 .right {
   width: 40%;
-  height: fit-content;
-  flex-direction: column;
   height: auto;
 }
+
 .column a {
   width: auto;
 }
@@ -232,179 +380,92 @@ main {
   justify-content: space-evenly;
   height: 550px;
 }
+
 .wrap a {
   width: 30%;
 }
+
 .column {
   flex-direction: column;
   display: contents;
 }
 
 .card {
-  border: 3px solid white;
+  border: 3px solid #fff;
   border-radius: 10px;
-  background-color: white;
+  background-color: #fff;
   display: flex;
   overflow: hidden;
-
   text-align: left;
 }
+
 .bottomDescription {
   flex-direction: column;
 }
+
 .rightDescription {
   flex-direction: row;
   margin-bottom: 20px;
-  margin-left: 40px;
 }
+
 .bottomDescription img {
   height: 130px;
-
   object-fit: cover;
 }
+
 .rightDescription img {
   height: 165px;
-  width: 200px;
+  width: 30%;
   object-fit: cover;
 }
+
 .rightDescription .cardDescription {
-  width: 250px;
+  width: 70%;
 }
+
 .rightDescription .stars {
   margin-top: auto;
   padding: 10px;
 }
+
 .cardDescription {
   display: flex;
   flex-direction: column;
 }
+
 .cardDescription p {
   margin: 0;
-  padding: 10px 10px;
+  padding: 10px;
 }
+
 .starsUp {
   color: #0065fc;
 }
+
 .starsDown {
   color: #f2f2f2;
 }
+
+#foot,
 .stars {
   display: flex;
   flex-direction: row;
+}
+
+.stars {
   align-items: center;
   padding: 5px 10px;
 }
+
 .card:hover {
   border: 3px solid #0065fc;
 }
 
-.bottom {
-  background-color: white;
-  margin-top: 20px;
-  width: 100%;
-  height: 650px;
-  padding: 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 50px 145px 145px 45px 100px 145px;
-  margin-bottom: 60px;
-}
-.img1 {
-  width: 600px;
-  height: 520px;
-}
-.card1 {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 7;
-}
-.img2 {
-  width: 600px;
-  height: 275px;
-}
-.card2 {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 5;
-}
-.img3 {
-  width: 600px;
-  height: 185px;
-}
-.card3 {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 5;
-  grid-row-end: 7;
-}
-
-.img4 {
-  width: 600px;
-  height: 520px;
-}
-.card4 {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 2;
-  grid-row-end: 7;
-}
-.img5 {
-  width: 600px;
-  height: 230px;
-}
-.card5 {
-  grid-column-start: 4;
-  grid-column-end: 5;
-  grid-row-start: 2;
-  grid-row-end: 4;
-}
-.img6 {
-  width: 600px;
-  height: 230px;
-}
-.card6 {
-  grid-column-start: 4;
-  grid-column-end: 5;
-  grid-row-start: 4;
-  grid-row-end: 7;
-}
-
-.cardBigImage {
-  flex-direction: column;
-  width: auto;
-  border: #f2f2f2 solid 3px;
-  margin-top: 0px;
-  box-shadow: #f2f2f2 5px 5px 5px;
-}
-.cardBigImage:hover {
-  border: #0065fc solid 3px;
-}
-.cardBigImage img {
-  object-fit: cover;
-}
-
-.cardBigImageDescription {
-  height: 50px;
-  display: flex;
-  align-items: center;
-  padding-left: 20px;
-}
-.cardBigImageDescription p {
-  margin: 0;
-}
-
-footer {
-  font-family: raleway;
-  margin: 0;
-}
 #foot {
   background-color: #f2f2f2;
-  display: flex;
-  flex-direction: row;
   justify-content: space-around;
 }
+
 .contentFoot {
   display: flex;
   width: 100%;
@@ -420,17 +481,16 @@ footer {
 #foot ol {
   padding: 0;
   display: flex;
+}
+
+#foot ol,
+.about,
+.accommodation,
+.help {
   flex-direction: column;
 }
 
-.about {
-  flex-direction: column;
-}
-.accommodation {
-  flex-direction: column;
-  justify-content: end;
-}
+.accommodation,
 .help {
-  flex-direction: column;
   justify-content: end;
 }
