--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-ed CSS Source map Restructure Beautify @font-face {
+@font-face {
   font-family: raleway;
   font-style: normal;
   font-weight: 400;
@@ -18,6 +18,7 @@ footer {
 
 #bloc_page {
   width: 1440px;
+  margin: auto;
 }
 
 a {
@@ -39,7 +40,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  padding-left: initial;
+  padding-left: 0;
 }
 
 nav ul {
@@ -69,7 +70,7 @@ nav ul li a:hover {
 
 .navigation,
 nav button {
-  height: 200px;
+  height: 100%;
   background-color: #fff;
 }
 
