--- a/style.css
+++ b/style.css
@@ -33,14 +33,18 @@ a {
 header,
 nav {
   display: flex;
+}
+
+header {
   padding: 0 50px;
+  flex-direction: column;
 }
 
 nav {
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  padding-left: 0;
+  padding: 0 50px 0 0;
 }
 
 nav ul {
@@ -93,10 +97,6 @@ nav button {
   outline: 0;
 }
 
-header {
-  flex-direction: column;
-}
-
 h1 {
   font-size: 1.5em;
 }
@@ -141,7 +141,9 @@ h2 {
   font-weight: lighter;
   padding: 0 10px;
   overflow: hidden;
+  border-radius: 10px;
 }
+
 .searchbutton i {
   display: none;
 }
@@ -286,6 +288,10 @@ main {
   object-fit: cover;
 }
 
+.cardBigImage2 img {
+  height: 380px;
+}
+
 .cardBigImage2 {
   grid-column-start: 2;
   grid-column-end: 3;
@@ -295,10 +301,6 @@ main {
 
 #photo2 {
   grid-area: photo2;
-}
-
-.cardBigImage2 img {
-  height: 380px;
 }
 
 .cardBigImage2,
@@ -324,12 +326,12 @@ main {
   object-fit: cover;
 }
 
-#photo4 {
-  grid-area: photo4;
-}
-
 .cardBigImage4 img {
   height: 600px;
+}
+
+#photo4 {
+  grid-area: photo4;
 }
 
 #photo5 {
