--- a/style_tab.css
+++ b/style_tab.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 383px) {
+@media screen and (min-width: 384px) and (max-width: 768px) {
   #logo {
     width: 100px;
     padding: 0 20px;
@@ -11,6 +11,12 @@
   header {
     grid-template-rows: repeat(11, auto);
     padding: 0;
+  }
+
+  h1,
+  h2 {
+    background: 0 0;
+    text-align: center;
   }
 
   button,
@@ -38,7 +44,7 @@
   header,
   nav {
     display: grid;
-    grid-template-columns: 191px 191px;
+    grid-template-columns: 384px 384px;
   }
 
   .navigation {
@@ -53,6 +59,13 @@
     grid-row-end: 3;
     padding: 0;
     margin: 0;
+  }
+  nav button,
+  nav ul li {
+    padding: 0 20px;
+    vertical-align: middle;
+    width: 384px;
+    text-align: center;
   }
 
   nav ul li:hover {
@@ -104,9 +117,7 @@
   h2 {
     grid-row-start: 4;
     grid-row-end: 5;
-    font-size: small;
-    margin-bottom: 30px;
-    margin-top: 0;
+    font-size: large;
   }
 
   .searchBar {
@@ -115,11 +126,11 @@
     border: solid #f2f2f2 2px;
     background-color: #f2f2f2;
     height: 40px;
-    display: inline-flex;
+
     border-radius: 10px;
     overflow: hidden;
-    width: auto;
-    margin: 0 20px;
+
+    margin: 0 192px;
   }
 
   .searchbutton {
@@ -141,8 +152,12 @@
     grid-row-start: 6;
     grid-row-end: 10;
     display: flex;
-    flex-direction: column;
-    align-items: inherit;
+    flex-direction: row;
+    align-items: center;
+    height: 80px;
+  }
+  .filters p {
+    margin-bottom: 30px;
   }
 
   #info,
@@ -158,7 +173,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    height: 150px;
+
     align-content: center;
     padding: 0 20px;
   }
@@ -168,12 +183,12 @@
     grid-column-end: 3;
     grid-row-start: 10;
     grid-row-end: 11;
-    font-size: 12px;
+    font-size: small;
+    justify-content: center;
   }
 
   .filterBtn {
     margin-bottom: 15px;
-    margin-right: 25px;
   }
 
   .searchBar i {
@@ -182,17 +197,16 @@
 
   .left,
   .right {
-    width: 383px;
+    width: 320px;
     height: fit-content;
     flex-direction: column;
   }
 
   .contentContainer.right {
     order: -1;
-  }
-
-  .cardContainerTitle {
-    margin-left: 20px;
+    width: 95%;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .cardContainer,
@@ -207,23 +221,16 @@
 
   .cardContainer {
     height: auto;
-    width: 343px;
-    padding-left: 20px;
   }
 
   .contentContainerTitle {
     justify-content: space-between;
     flex-direction: row;
-    margin-left: 20px;
-    margin-right: 20px;
     display: flex;
   }
 
   .wrap a {
-    width: 343px;
-  }
-  .left p {
-    margin-left: 20px;
+    width: 280px;
   }
 
   .bottomDescription img {
@@ -287,16 +294,16 @@
   .cardBigImage4,
   .cardBigImage5,
   .cardBigImage6 {
-    width: 343px;
+    width: 280px;
     margin-bottom: 20px;
   }
 
   .contentFoot {
     padding-top: 20px;
-    flex-direction: column;
+    justify-content: space-between;
   }
 
   #foot {
-    width: 383px;
+    width: 768px;
   }
 }
