--- a/style_tel.css
+++ b/style_tel.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 383px) {
+@media screen and (max-width: 360px) {
   #logo {
     width: 100px;
     padding: 0 20px;
@@ -38,7 +38,7 @@
   header,
   nav {
     display: grid;
-    grid-template-columns: 191px 191px;
+    grid-template-columns: 180px 180px;
   }
 
   .navigation {
@@ -182,7 +182,7 @@
 
   .left,
   .right {
-    width: 383px;
+    width: 360px;
     height: fit-content;
     flex-direction: column;
   }
@@ -207,7 +207,7 @@
 
   .cardContainer {
     height: auto;
-    width: 343px;
+    width: 320px;
     padding-left: 20px;
   }
 
@@ -220,7 +220,7 @@
   }
 
   .wrap a {
-    width: 343px;
+    width: 320px;
   }
   .left p {
     margin-left: 20px;
@@ -287,7 +287,7 @@
   .cardBigImage4,
   .cardBigImage5,
   .cardBigImage6 {
-    width: 343px;
+    width: 320px;
     margin-bottom: 20px;
   }
 
@@ -295,8 +295,302 @@
     padding-top: 20px;
     flex-direction: column;
   }
+}
+@media screen and (max-width: 375px) {
+  #logo {
+    width: 100px;
+    padding: 0 20px;
+    margin-top: 10px;
+  }
+  #bloc_page {
+    width: 100%;
+  }
 
-  #foot {
-    width: 383px;
+  header {
+    grid-template-rows: repeat(11, auto);
+    padding: 0;
+  }
+
+  button,
+  nav img {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 1;
+  }
+
+  nav {
+    grid-template-rows: auto auto;
+    height: 120px;
+  }
+
+  nav ul li a {
+    font-size: initial;
+  }
+
+  .bold {
+    font-size: 17px;
+  }
+
+  .navigation,
+  header,
+  nav {
+    display: grid;
+    grid-template-columns: 187px 187px;
+  }
+
+  .navigation {
+    grid-template-rows: 55px auto;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    background: 0 0;
+  }
+
+  ul {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    padding: 0;
+    margin: 0;
+  }
+
+  nav ul li:hover {
+    border-bottom: 2px solid #0065fc;
+    border-top: none;
+  }
+
+  button {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-end: 2;
+  }
+
+  nav button {
+    font-size: x-large;
+    display: flex;
+    list-style: none;
+    border: 0;
+    outline: 0;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin-top: 5px;
+  }
+
+  nav button:hover {
+    border: 0;
+  }
+
+  h1 {
+    grid-row-start: 3;
+    grid-row-end: 4;
+    font-size: larger;
+  }
+
+  .navigation,
+  .searchBar,
+  h1,
+  h2,
+  ul {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  h1,
+  h2 {
+    background: 0 0;
+  }
+
+  h2 {
+    grid-row-start: 4;
+    grid-row-end: 5;
+    font-size: small;
+    margin-bottom: 30px;
+    margin-top: 0;
+  }
+
+  .searchBar {
+    grid-row-start: 5;
+    grid-row-end: 6;
+    border: solid #f2f2f2 2px;
+    background-color: #f2f2f2;
+    height: 40px;
+    display: inline-flex;
+    border-radius: 10px;
+    overflow: hidden;
+    width: auto;
+    margin: 0 20px;
+  }
+
+  .searchbutton {
+    display: flex;
+    justify-content: center;
+  }
+
+  .searchbutton i {
+    display: block;
+  }
+
+  .searchbutton strong {
+    display: none;
+  }
+
+  .filters {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 6;
+    grid-row-end: 10;
+    display: flex;
+    flex-direction: column;
+    align-items: inherit;
+  }
+
+  #info,
+  .filters p,
+  h1,
+  h2 {
+    padding: 0 20px;
+  }
+
+  .filterContainer {
+    margin-left: 0;
+    justify-content: start;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 150px;
+    align-content: center;
+    padding: 0 20px;
+  }
+
+  #info {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 10;
+    grid-row-end: 11;
+    font-size: 12px;
+  }
+
+  .filterBtn {
+    margin-bottom: 15px;
+    margin-right: 25px;
+  }
+
+  .searchBar i {
+    padding: 0 15px;
+  }
+
+  .left,
+  .right {
+    width: 375px;
+    height: fit-content;
+    flex-direction: column;
+  }
+
+  .contentContainer.right {
+    order: -1;
+  }
+
+  .cardContainerTitle {
+    margin-left: 20px;
+  }
+
+  .cardContainer,
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  main {
+    padding: 0;
+  }
+
+  .cardContainer {
+    height: auto;
+    width: 335px;
+    padding-left: 20px;
+  }
+
+  .contentContainerTitle {
+    justify-content: space-between;
+    flex-direction: row;
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flex;
+  }
+
+  .wrap a {
+    width: 335px;
+  }
+  .left p {
+    margin-left: 20px;
+  }
+
+  .bottomDescription img {
+    height: 115px;
+  }
+
+  .bottomCard {
+    display: block;
+    padding: 0 20px;
+  }
+
+  .bottomCard > a {
+    height: 100px;
+  }
+
+  .cardDescription p {
+    margin: 0;
+    padding: 5px 10px;
+  }
+
+  .bottomDescription {
+    margin-bottom: 20px;
+  }
+
+  .left {
+    background: 0 0;
+  }
+
+  .right {
+    padding: 0;
+  }
+
+  .card {
+    border: 3px solid #f2f2f2;
+    box-shadow: #f2f2f2 3px 3px 3px;
+  }
+
+  .contentContainer {
+    border-radius: 0;
+    padding: 0;
+  }
+
+  .rightDescription img {
+    height: 120px;
+    width: 40%;
+    object-fit: cover;
+  }
+
+  .cardBigImage1 img,
+  .cardBigImage2 img,
+  .cardBigImage3 img,
+  .cardBigImage4 img,
+  .cardBigImage5 img,
+  .cardBigImage6 img {
+    height: 130px;
+  }
+
+  .cardBigImage1,
+  .cardBigImage2,
+  .cardBigImage3,
+  .cardBigImage4,
+  .cardBigImage5,
+  .cardBigImage6 {
+    width: 335px;
+    margin-bottom: 20px;
+  }
+
+  .contentFoot {
+    padding-top: 20px;
+    flex-direction: column;
   }
 }
