--- a/style_tel.css
+++ b/style_tel.css
@@ -1,302 +1,3 @@
-@media screen and (max-width: 360px) {
-  #logo {
-    width: 100px;
-    padding: 0 20px;
-    margin-top: 10px;
-  }
-
-  #bloc_page {
-    width: 360px;
-  }
-
-  header {
-    grid-template-rows: repeat(11, auto);
-    padding: 0;
-  }
-
-  button,
-  nav img {
-    grid-row-start: 1;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-end: 2;
-  }
-
-  nav img {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-end: 1;
-  }
-
-  nav {
-    grid-template-rows: auto auto;
-    height: 120px;
-  }
-
-  nav ul li a {
-    font-size: initial;
-  }
-
-  .bold {
-    font-size: 17px;
-  }
-
-  .navigation,
-  header,
-  nav {
-    display: grid;
-    grid-template-columns: 180px 180px;
-  }
-
-  .navigation {
-    grid-template-rows: 55px auto;
-    grid-row-start: 1;
-    grid-row-end: 3;
-    background: 0 0;
-  }
-
-  ul {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    padding: 0;
-    margin: 0;
-  }
-
-  nav ul li:hover {
-    border-bottom: 2px solid #0065fc;
-    border-top: none;
-  }
-
-  nav button {
-    font-size: x-large;
-    display: flex;
-    list-style: none;
-    border: 0;
-    outline: 0;
-    align-items: flex-end;
-    justify-content: flex-end;
-    margin-top: 5px;
-  }
-
-  nav button:hover {
-    border: 0;
-  }
-
-  h1 {
-    grid-row-start: 3;
-    grid-row-end: 4;
-    font-size: larger;
-  }
-
-  .navigation,
-  .searchBar,
-  h1,
-  h2,
-  ul {
-    grid-column-start: 1;
-    grid-column-end: 3;
-  }
-
-  h1,
-  h2 {
-    background: 0 0;
-  }
-
-  h2 {
-    grid-row-start: 4;
-    grid-row-end: 5;
-    font-size: small;
-    margin-bottom: 30px;
-    margin-top: 0;
-  }
-
-  .searchBar {
-    grid-row-start: 5;
-    grid-row-end: 6;
-    border: solid #f2f2f2 2px;
-    background-color: #f2f2f2;
-    height: 40px;
-    display: inline-flex;
-    border-radius: 10px;
-    overflow: hidden;
-    width: auto;
-    margin: 0 20px;
-  }
-
-  .searchbutton {
-    display: flex;
-    justify-content: center;
-  }
-
-  .searchbutton i {
-    display: block;
-  }
-
-  .searchbutton strong {
-    display: none;
-  }
-
-  .filters {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 6;
-    grid-row-end: 10;
-    display: flex;
-    flex-direction: column;
-    align-items: inherit;
-  }
-
-  #info,
-  .filters p,
-  h1,
-  h2 {
-    padding: 0 20px;
-  }
-
-  .filterContainer {
-    margin-left: 0;
-    justify-content: start;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    height: 150px;
-    align-content: center;
-    padding: 0 20px;
-  }
-
-  #info {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 10;
-    grid-row-end: 11;
-    font-size: 12px;
-  }
-
-  .filterBtn {
-    margin-bottom: 15px;
-    margin-right: 25px;
-  }
-
-  .searchBar i {
-    padding: 0 15px;
-  }
-
-  .left,
-  .right {
-    width: 360px;
-    height: fit-content;
-    flex-direction: column;
-  }
-
-  .contentContainer.right {
-    order: -1;
-  }
-
-  .cardContainerTitle,
-  .left p {
-    margin-left: 20px;
-  }
-
-  .cardContainer,
-  main {
-    display: flex;
-    flex-direction: column;
-  }
-
-  main {
-    padding: 0;
-  }
-
-  .cardContainer {
-    height: auto;
-    width: 320px;
-    padding-left: 20px;
-  }
-
-  .contentContainerTitle {
-    justify-content: space-between;
-    flex-direction: row;
-    margin-left: 20px;
-    margin-right: 20px;
-    display: flex;
-  }
-
-  .wrap a {
-    width: 320px;
-  }
-
-  .bottomDescription img {
-    height: 115px;
-  }
-
-  .bottomCard {
-    display: block;
-    padding: 0 20px;
-  }
-
-  .bottomCard > a {
-    height: 100px;
-  }
-
-  .cardDescription p {
-    margin: 0;
-    padding: 5px 10px;
-  }
-
-  .bottomDescription {
-    margin-bottom: 20px;
-  }
-
-  .left {
-    background: 0 0;
-  }
-
-  .right {
-    padding: 0;
-  }
-
-  .card {
-    border: 3px solid #f2f2f2;
-    box-shadow: #f2f2f2 3px 3px 3px;
-  }
-
-  .contentContainer {
-    border-radius: 0;
-    padding: 0;
-  }
-
-  .rightDescription img {
-    height: 120px;
-    width: 40%;
-    object-fit: cover;
-  }
-
-  .cardBigImage1 img,
-  .cardBigImage2 img,
-  .cardBigImage3 img,
-  .cardBigImage4 img,
-  .cardBigImage5 img,
-  .cardBigImage6 img {
-    height: 130px;
-    width: 100%;
-  }
-
-  .cardBigImage1,
-  .cardBigImage2,
-  .cardBigImage3,
-  .cardBigImage4,
-  .cardBigImage5,
-  .cardBigImage6 {
-    width: 320px;
-    margin-bottom: 20px;
-  }
-
-  .contentFoot {
-    padding-top: 20px;
-    flex-direction: column;
-  }
-}
-
 @media screen and (max-width: 375px) {
   #logo {
     width: 100px;
@@ -359,6 +60,10 @@
     grid-row-end: 3;
     padding: 0;
     margin: 0;
+  }
+  li {
+    text-align: center;
+    width: 50%;
   }
 
   nav ul li:hover {
@@ -595,6 +300,309 @@
   .cardBigImage5,
   .cardBigImage6 {
     width: 335px;
+    margin-bottom: 20px;
+  }
+
+  .contentFoot {
+    padding-top: 20px;
+    flex-direction: column;
+    box-sizing: border-box;
+  }
+}
+@media screen and (max-width: 360px) {
+  #logo {
+    width: 100px;
+    padding: 0 20px;
+    margin-top: 10px;
+  }
+
+  #bloc_page {
+    width: 360px;
+  }
+
+  header {
+    grid-template-rows: repeat(11, auto);
+    padding: 0;
+  }
+
+  button,
+  nav img {
+    grid-row-start: 1;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-end: 2;
+  }
+
+  nav img {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-end: 1;
+  }
+
+  nav {
+    grid-template-rows: auto auto;
+    height: 120px;
+  }
+
+  nav ul li a {
+    font-size: initial;
+  }
+
+  .bold {
+    font-size: 17px;
+  }
+
+  .navigation,
+  header,
+  nav {
+    display: grid;
+    grid-template-columns: 180px 180px;
+  }
+
+  .navigation {
+    grid-template-rows: 55px auto;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    background: 0 0;
+  }
+
+  ul {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    padding: 0;
+    margin: 0;
+  }
+  li {
+    text-align: center;
+    width: 50%;
+  }
+
+  nav ul li:hover {
+    border-bottom: 2px solid #0065fc;
+    border-top: none;
+  }
+
+  nav button {
+    font-size: x-large;
+    display: flex;
+    list-style: none;
+    border: 0;
+    outline: 0;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin-top: 5px;
+  }
+
+  nav button:hover {
+    border: 0;
+  }
+
+  h1 {
+    grid-row-start: 3;
+    grid-row-end: 4;
+    font-size: larger;
+  }
+
+  .navigation,
+  .searchBar,
+  h1,
+  h2,
+  ul {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  h1,
+  h2 {
+    background: 0 0;
+  }
+
+  h2 {
+    grid-row-start: 4;
+    grid-row-end: 5;
+    font-size: small;
+    margin-bottom: 30px;
+    margin-top: 0;
+  }
+
+  .searchBar {
+    grid-row-start: 5;
+    grid-row-end: 6;
+    border: solid #f2f2f2 2px;
+    background-color: #f2f2f2;
+    height: 40px;
+    display: inline-flex;
+    border-radius: 10px;
+    overflow: hidden;
+    width: auto;
+    margin: 0 20px;
+  }
+
+  .searchbutton {
+    display: flex;
+    justify-content: center;
+  }
+
+  .searchbutton i {
+    display: block;
+  }
+
+  .searchbutton strong {
+    display: none;
+  }
+
+  .filters {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 6;
+    grid-row-end: 10;
+    display: flex;
+    flex-direction: column;
+    align-items: inherit;
+  }
+
+  #info,
+  .filters p,
+  h1,
+  h2 {
+    padding: 0 20px;
+  }
+
+  .filterContainer {
+    margin-left: 0;
+    justify-content: start;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 150px;
+    align-content: center;
+    padding: 0 20px;
+  }
+
+  #info {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 10;
+    grid-row-end: 11;
+    font-size: 12px;
+  }
+
+  .filterBtn {
+    margin-bottom: 15px;
+    margin-right: 25px;
+  }
+
+  .searchBar i {
+    padding: 0 15px;
+  }
+
+  .left,
+  .right {
+    width: 360px;
+    height: fit-content;
+    flex-direction: column;
+  }
+
+  .contentContainer.right {
+    order: -1;
+  }
+
+  .cardContainerTitle,
+  .left p {
+    margin-left: 20px;
+  }
+
+  .cardContainer,
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  main {
+    padding: 0;
+  }
+
+  .cardContainer {
+    height: auto;
+    width: 320px;
+    padding-left: 20px;
+  }
+
+  .contentContainerTitle {
+    justify-content: space-between;
+    flex-direction: row;
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flex;
+  }
+
+  .wrap a {
+    width: 320px;
+  }
+
+  .bottomDescription img {
+    height: 115px;
+  }
+
+  .bottomCard {
+    display: block;
+    padding: 0 20px;
+  }
+
+  .bottomCard > a {
+    height: 100px;
+  }
+
+  .cardDescription p {
+    margin: 0;
+    padding: 5px 10px;
+  }
+
+  .bottomDescription {
+    margin-bottom: 20px;
+  }
+
+  .left {
+    background: 0 0;
+  }
+
+  .right {
+    padding: 0;
+  }
+
+  .card {
+    border: 3px solid #f2f2f2;
+    box-shadow: #f2f2f2 3px 3px 3px;
+  }
+
+  .contentContainer {
+    border-radius: 0;
+    padding: 0;
+  }
+
+  .rightDescription img {
+    height: 120px;
+    width: 40%;
+    object-fit: cover;
+  }
+
+  .cardBigImage1 img,
+  .cardBigImage2 img,
+  .cardBigImage3 img,
+  .cardBigImage4 img,
+  .cardBigImage5 img,
+  .cardBigImage6 img {
+    height: 130px;
+    width: 100%;
+  }
+
+  .cardBigImage1,
+  .cardBigImage2,
+  .cardBigImage3,
+  .cardBigImage4,
+  .cardBigImage5,
+  .cardBigImage6 {
+    width: 320px;
     margin-bottom: 20px;
   }
 
