--- a/style_tel.css
+++ b/style_tel.css
@@ -61,7 +61,7 @@
     padding: 0;
     margin: 0;
   }
-  li {
+  nav ul li {
     text-align: center;
     width: 50%;
   }
@@ -372,7 +372,7 @@
     padding: 0;
     margin: 0;
   }
-  li {
+  nav ul li {
     text-align: center;
     width: 50%;
   }
