--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@ h2 {
   border: 0;
   width: 300px;
   padding: 0 10px;
+  outline: none;
+}
+.searchBar:active {
+  outline: none;
 }
 
 .searchbutton {
@@ -142,6 +146,7 @@ h2 {
   padding: 0 10px;
   overflow: hidden;
   border-radius: 10px;
+  outline: none;
 }
 
 .searchbutton i {
